feat: Add `finalized` field to Transaction model and refactor frontend and mobile API calls to use a new centralized API client.